                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.3.0

  *) Amend apr_reslist to expire resources whose idle time exceeds ttl.
     PR 42841 [Tom Donovan, Nick Kew, Ruediger Pluem]

  *) Modularize ldap's stub with the dbd dso modular structure, and teach
     the apu dso's to respect the system specific shared lib path var.
     To link to an application without ldap libs, query 
     `apu-1-config --avoid-ldap --libs` (in addition to the usual linker
     queries for compiling and linking).  [William Rowe]

  *) Support building DBD drivers as DSOs by default; use --disable-util-dso
     flag to configure to use static link.  [Joe Orton, Bojan Smojver]

  *) All DBD drivers now count rows from 1, which affects PostgreSQL and MySQL
     drivers in particular. Using row number zero is an error.
     [Bojan Smojver]

  *) Add support for OpenLDAP's ability to support a directory of
     certificate authorities. [Eric Covener]

  *) Better error detection for bucket allocation failures.
     [Jim Jagielski]

  *) Ensure that the LDAP code can compile cleanly on platforms that do
     not define the LDAP_OPT_REFHOPLIMIT symbol, most specifically Windows.
     [Victor <victorjss@gmail.com>, Graham Leggett]

  *) Fix the setting of LDAP_OPT_SSL on Win2k, which expects a pointer to
     the value LDAP_OPT_ON, and not the value itself. XP works with both.
     [Victor <victorjss@gmail.com>]

  *) Fix a regression in apr_brigade_partition that causes integer overflows
     on systems where apr_off_t > apr_size_t.  [Ruediger Pluem]

  *) Ensure that apr_uri_unparse does not add scheme to URI if
     APR_URI_UNP_OMITSITEPART flag is set. PR 44044
     [Michael Clark <michael metaparadigm.com>]

  *) Add an LDAP rebind implementation so that authentication can be
     carried through referrals. [Paul J. Reder]

  *) Fix the make test target in the spec file. [Graham Leggett]

  *) Introduce apr_dbd_open_ex() [Bojan Smojver]
